<resources>
    <string name="app_name">RecipeNetwork</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_picture">Recipe Picture</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="units">Units</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity_lower">quantity</string>
    <string name="units_lower">units</string>
    <string name="ingredient_lower">ingredient</string>
    <string name="remove_ingredient">Remove Ingredient</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="steps">Steps</string>
    <string name="step_number">Step #</string>
    <string name="description">Description</string>
    <string name="step_number_lower">step #</string>
    <string name="description_lower">description</string>
    <string name="remove_step">Remove Step</string>
    <string name="add_step">Add Step</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="users">Users</string>
    <string name="recipes">Recipes</string>
    <string name="search_user">Search User</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="remove_recipe">Remove Recipe</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="remove_user">Remove User</string>
    <string name="remove">Remove</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="my_profile">My Profile</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="reply">Reply</string>
    <string name="created_by">Created by</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="instructions">Instructions</string>
</resources>
