<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipeViewRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:inputType="text"
            android:textSize="20dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/recipeViewCreatedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/created_by"
            android:inputType="text"
            android:textSize="20dp"
            android:layout_margin="10dp"
            />


        <ImageView
            android:id="@+id/recipeViewPicture"
            android:layout_width="280dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:contentDescription="@string/recipe_picture" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorite"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_time"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>


        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">

                    <TableRow>

                        <TextView
                            android:text="@string/quantity"/>

                        <TextView
                            android:text="@string/units"/>

                        <TextView
                            android:text="@string/ingredient"/>

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:text="@string/quantity_lower"/>

                        <TextView
                            android:text="@string/units_lower"/>

                        <TextView
                            android:text="@string/ingredient_lower"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>