<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/viewMessagesFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/viewMessagesSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:inputType="text"
        android:textSize="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/viewMessagesMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/viewMessagesReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:text="@string/reply"
        android:textAllCaps="false"/>
</LinearLayout>