<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/recipeListViewDetailedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipeListViewDetailedImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/recipe_picture"
            android:layout_marginEnd="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeListViewDetailedAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_by" />

            <TextView
                android:id="@+id/recipeListViewDetailedDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/recipe_description"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>